2008-05-17 [colin]	3.4.0cvs48

	* src/prefs_summaries.c
	* src/summaryview.c
		Fix bug 1608, 'Inconsistent behaviour of mark as read 
		options'. Patch by Pawel

2008-05-16 [colin]	3.4.0cvs47

	* src/imap.c
		Fix another possible crash (on fatal errors
		at login, like stream error).

2008-05-16 [paul]	3.4.0cvs46

	* tools/thunderbird-filters-convertor.pl
		fix a typo
		fix reading a tb rule that contains something
		like that: \"Sender\"

2008-05-16 [paul]	3.4.0cvs45

	* tools/README
	* tools/csv2addressbook.pl
		add support for gmail exported csv address book

2008-05-16 [colin]	3.4.0cvs44

	* configure.ac
	* src/ldapupdate.c
		Fix ldap deprecated calls. Patch by
		Michael Rasmussen

2008-05-16 [paul]	3.4.0cvs43

	* manual/de/account.xml
	* manual/it/account.xml
	* manual/it/ack.xml
	* manual/it/addrbook.xml
	* manual/it/claws-mail-manual.xml
	* manual/it/gpl.xml
	* manual/it/intro.xml
	* manual/it/starting.xml
		add pages towards German and Italian manuals.
		(just for storage, they are not built yet, due
		to being incomplete.) submitted by Speckmade
		<Speckmade@gmx.net> and Salvatore De Paolis
		<iwkse@claws-mail.org>

2008-05-16 [colin]	3.4.0cvs42

	* src/gtk/sslcertwindow.c
		Fix SHA1 fingerprint with GnuTLS

2008-05-15 [colin]	3.4.0cvs41

	* src/gtk/sslcertwindow.c
		Print SHA1 fingerprint too

2008-05-15 [colin]	3.4.0cvs40

	* src/imap.c
		Fix certificate port on TLS. It was 
		previously always 0.
		**IMPORTANT INFORMATION**: this will trigger 
		one wrong "New certificate" warning at the 
		first connection with this fix, if using STARTTLS
		on IMAP.
	* src/gtk/sslcertwindow.c
		Make labels selectable

2008-05-15 [colin]	3.4.0cvs39

	* src/imap.c
		Fix double free when STARTTLS fails (for
		example due to refusing the certificate)

2008-05-15 [paul]	3.4.0cvs38

	* manual/advanced.xml
		fix typo

2008-05-15 [paul]	3.4.0cvs37

	* manual/advanced.xml
	* src/prefs_send.c
		make outgoing_fallback_to_ascii a hidden pref

2008-05-14 [colin]	3.4.0cvs36
